--- a/blog1.html
+++ b/blog1.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="dcterms.date" content="2023-08-16">
-<meta name="description" content="In this blog, you will get some interesting knowledge about Matrix as a transformation and interpreting low rank matixes">
+<meta name="description" content="In this blog, you will get some interesting knowledge about Matrix as a transformation and interpreting low rank matrices">
 
 <title>Matrix as transformation and interpreting low rank matrix</title>
 <style>
