--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ ul.task-list li input[type="checkbox"] {
   </li>  
         <li>
     <a class="dropdown-item" href="./log_likelihood.html" rel="" target="">
- <span class="dropdown-text">log_likelihood.html</span></a>
+ <span class="dropdown-text">Log-Likelihood Odyssey: Tracing Optimal Model Fit</span></a>
   </li>  
     </ul>
   </li>
