--- a/log_likelihood.html
+++ b/log_likelihood.html
@@ -210,6 +210,12 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
       <p class="date">August 16, 2023</p>
     </div>
   </div>
+  <div>
+    <div class="quarto-title-meta-heading">Author</div>
+    <div class="quarto-title-meta-contents">
+      <p class="date">Ruchit Jagodara</p>
+    </div>
+  </div>
   
     
   </div>
